@@ -26,6 +26,7 @@ getValuesBlock with lyrs argument. Reported by Antoine Stevens
 In approxNA with large files NAs were ignored and the NArule was ignored. Reported by Pablo Timoner
 isValid(raster()) failed. Reported by dww on http://stackoverflow.com/questions/37869271/how-to-dput-a-raster/37871930
 zapply passes on ... arguments to stackApply
+res() for rotated rasters was wrong https://gis.stackexchange.com/questions/259321/opening-rotated-raster-in-r (fix suggested by Spacedman)
 
 --- 31-May-2016, version: 2.5-8
 new functions for Raster objects: as.integer, as.list
